# netkit-tftp

./: .clang-format  .clang-tidy  .cmake-format  .cookiecutter.json  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  GNUmakefile  README  async_tftpd_server.cpp  async_tftpd_server.hpp  async_udp_echo_server.cpp  configure  ctrl-agent.py  option_test.cpp  requirements.txt  test.sh  tftp_options.cpp  tftp_subs.cpp  tftpd-config.cmake  tftpd.cpp  tftpd.hpp  tftpd_options.cpp  tftpd_test.cpp  tftpd_utils.cpp  tftpsubs.cpp  tftpy_client.py  third_party_lib.cpp  version.h
.github/workflows/: cmake.yml
cmake/: CPM.cmake  WarningsAsErrors.cmake
include/arpa/: tftp.h
tftp/: CMakeLists.txt  main.c  tftp.1  tftp.c  tftpsubs.c  tftpsubs.h
tftpd/: CMakeLists.txt  Makefile  tftpd.8  tftpd.c
